tests/ui/const-generics/generic_const_exprs/next-solver-gce-recovery-issue-158428.stderr
error: `-Znext-solver=globally` and `generic_const_exprs` are incompatible, using them at the same time is not allowed
  --> $DIR/next-solver-gce-recovery-issue-158428.rs:5:12
   |
LL | #![feature(generic_const_exprs)]
   |            ^^^^^^^^^^^^^^^^^^^
   |
   = help: remove one of these features

error[E0271]: type mismatch resolving `const { size_of::<T>() } == (size_of::<T>)()`
  --> $DIR/next-solver-gce-recovery-issue-158428.rs:11:15
   |
LL |     as_bytes: [u8; const { size_of::<T>() }],
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ types differ

error: the type `[u8; const { size_of::<T>() }]` is not well-formed
  --> $DIR/next-solver-gce-recovery-issue-158428.rs:11:15
   |
LL |     as_bytes: [u8; const { size_of::<T>() }],
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0271`.
